<resources>
    <string name="app_name">Super Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your weather</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="moscow">Moscow</string>
    <string name="menu_home">Weather</string>
    <string name="menu_forecast_for_the_week">Forecast for the week</string>
    <string name="menu_settings">Settings</string>
    <string name="sp_16" translatable="false">+</string>
    <string name="now_sunny">now - Sunny</string>
    <string name="wind">Wind</string>
    <string name="wind1">м/с</string>
    <string name="pressure">Pressure </string>
    <string name="pressure1"> mm m.c.</string>
    <string name="humidity">Humidity</string>
    <string name="humidity1">%</string>
    <string name="water">Water t. 17 C</string>
    <string name="icon">Sunny</string>
    <string name="current_place">Current place</string>
    <string name="activity_Settings">Activity Settings</string>
    <string name="favourites">Favourites</string>
    <string name="select_city"> + Select city</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings_title1">User Settings</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <string name="windPreference">Reflect Wind</string>
    <string name="pressurePreference">Reflect Pressure</string>
    <string name="waterPreference">Reflect Water</string>
    <string name="humidityPreference">Reflect Humidity</string>
    <string name="settings">Settings</string>
    <string name="add_5_degrees">Add 5 Degrees</string>
    <string name="sendweather">Send Weather</string>
    <string name="sendweatherMsg">Send Weather</string>
    <string name="snackbar_text">Temporarily unavailable. Work is underway</string>
    <string name="server_unavailable">The server is unavailable</string>
    <string name="menu_about_the_developer">About the developer</string>
    <string name="share_the_weather">Share the weather</string>
    <string name="hello_blank_fragment">Hi! I heve been programming in Android</string>
    <string name="title_alert_dialog">Error!</string>
    <string name="message_allert_dialog">There is no Internet access</string>
    <string name="button_ok">ОК</string>
    <string name="network_error">Check your internet connection</string>
    <string name="сity_selection">City selection</string>
    <string name="current_place_setting">Current place</string>
    <string name="choose_place">Choose a place</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="default_value">Default value</string>


</resources>