<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/overcastday_weather"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_forecast_for_the_week"
            android:icon="@drawable/list_on"
            android:title="@string/menu_forecast_for_the_week" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings2"
            android:title="@string/menu_settings" />

    </group>
    <item
        android:id="@+id/nav_about_the_developer"
        android:icon="@drawable/voicepresentaion_vo"
        android:title="@string/menu_about_the_developer" />
</menu>